<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:textFontWeight="800"
        android:fontFamily="@font/inter_extrabold"
        android:letterSpacing="0.07"
        android:textStyle="bold"
        android:text="@string/tittle"
        android:textAlignment="textEnd"
        android:textColor="@color/blue_Primary"
        android:textSize="62sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <TextView
        android:id="@+id/title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/inter_extrabold"
        android:letterSpacing="0.07"
        android:text="@string/tittle"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textFontWeight="800"
        android:textSize="62sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/deskripsi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/black"
        android:fontFamily="@font/inter_extralight"
        android:text="@string/deskripsi"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"

        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signIN"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        app:cornerRadius="30dp"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/signUp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signUp"
        android:textSize="20sp"
        app:cornerRadius="30dp"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:layout_marginBottom="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="#000000"
        app:strokeWidth="2dp"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"
        android:textAllCaps="false"/>



</androidx.constraintlayout.widget.ConstraintLayout>