<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:elevation="0dp"
            app:menu="@menu/top_menu"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <androidx.cardview.widget.CardView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    app:cardCornerRadius="16dp"
                    android:layout_centerVertical="true">
                        
                    <ImageView
                        android:id="@+id/profil"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/fotoprofil"
                        tools:ignore="ContentDescription" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="28sp" />
            </RelativeLayout>


        </androidx.appcompat.widget.Toolbar>


    </com.google.android.material.appbar.AppBarLayout>

<!--    CONTENT-->

    <androidx.cardview.widget.CardView
        android:id="@+id/cardContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBar"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="12dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="2dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/dalam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardFoto"
                app:layout_constraintStart_toStartOf="@+id/dalam"
                app:layout_constraintTop_toTopOf="@id/dalam"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:cardCornerRadius="25dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp">

                <ImageView
                    android:id="@+id/profilPost"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/fotoprofil"
                    tools:ignore="ContentDescription" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_marginStart="16dp"
                android:id="@+id/namaAkun"
                android:textSize="16sp"
                app:layout_constraintTop_toTopOf="@id/cardFoto"
                app:layout_constraintStart_toEndOf="@id/cardFoto"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/nama_akun"
                android:textColor="@color/black"
                android:textStyle="bold"
                />

            <TextView
                android:textColor="@color/black"
                android:id="@+id/tanggal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                app:layout_constraintBottom_toTopOf="@id/kategori"
                app:layout_constraintTop_toBottomOf="@id/namaAkun"
                app:layout_constraintStart_toStartOf="@id/namaAkun"
                android:text="@string/tanggal"/>

            <TextView
                android:id="@+id/kategori"
                app:layout_constraintStart_toStartOf="@id/namaAkun"
                app:layout_constraintBottom_toBottomOf="@id/cardFoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:textColor="@color/black"
                android:text="@string/kategori"/>

            <TextView
                android:id="@+id/textContent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/namaAkun"
                app:layout_constraintTop_toBottomOf="@id/kategori"
                app:layout_constraintEnd_toEndOf="@id/dalam"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:textColor="@color/black"
                android:justificationMode="inter_word"
                android:text="@string/text_content"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_right_arrow2"
                app:layout_constraintTop_toBottomOf="@id/textContent"
                app:layout_constraintEnd_toEndOf="@id/dalam"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:backgroundTint="#00FFFFFF"
                tools:ignore="ContentDescription" />


        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.cardview.widget.CardView>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNav"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:menu="@menu/bottom_nav"
            app:itemIconSize="30dp"

            />





</androidx.constraintlayout.widget.ConstraintLayout>